...
                    NavigationLink {
                        NotificationsView(scheduler: CustomNotificationScheduler.live())
                    } label: {
                        Image(systemName: "bell")
                    }
                    .accessibilityLabel("Notifications")
                    .accessibilityIdentifier("Journal.Notifications")
                }

                LogSetToolbarItems()
            }
            .sheet(isPresented: $showingImport) {
                ImportView.default()
...
